--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        hola muchachos este es mi sitio
+        hola muchachos este es mi sitio del proyecto de platzy
     </p>
 </body>
 </html>
