--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <p>
         hola muchachos este es mi sitio del proyecto de platzy 
-        espero les guste comenzamos el camino de creacion de paginas web hoy 
+        espero les guste comenzamos el camino de creacion de paginas web hoy, 
     </p>
+        <p>
+            NOS ESPERA UN LARGO camino
+        </p> 
 </body>
 </html>
