--- a/blopost.html
+++ b/blopost.html
@@ -10,14 +10,17 @@
 <body>
     <div id="container">
         <div id="cabecera">
-           <h1>Cabecera</h1>
+            Hyperblog 
+            <spam id ="tagline">Tu blog de confianza</spam>
         </div>
         <div id="post">
             <h1> Este es el titulo 
                 atractivo e interesante del post </h1>
+            <p> y este es el parrafo de inicio donde 
+        vamos a explicar como realizar las ramas o branches
+        ADEMAS VAMOS A EXPONER LA MANERA DE HACER UN MERGE PARA UNIR
+    LA RAMA SECUNDARIA Y LA PRINCIPAL </p>
     </div>
-    <p> y este es el parrafo de inicio donde 
-        vamos a explicar como realizar las ramas o branches </p>
     </div>
     
 </body>
