adicionando parrafo en el html

--- a/blopost.html
+++ b/blopost.html
@@ -9,14 +9,19 @@
 </head>
 <body>
     <div id="container">
-        <h1> Este es el titulo 
-            atractivo e interesante del post </h1>
-        <div id="post">
-        
-    <p> y este es el parrafo de inicio donde 
-        vamos a explicar como realizar las ramas o branches </p>
+        <div id="cabecera">
+            Hyperblog 
+            <spam id ="tagline">Tu blog de confianza</spam>
         </div>
-     </div>
+        <div id="post">
+            <h1> Este es el titulo 
+                atractivo e interesante del post </h1>
+            <p> y este es el parrafo de inicio donde 
+        vamos a explicar como realizar las ramas o branches y 
+        se vaa relizar un merge </p>
+        <p>Adicional vamos a agregar un parrafo para visualizar el merge de manera correcta</p>
+    </div>
+    </div>
     
 </body>
 </html>
