--- a/blopost.html
+++ b/blopost.html
@@ -17,9 +17,7 @@
             <h1> Este es el titulo 
                 atractivo e interesante del post </h1>
             <p> y este es el parrafo de inicio donde 
-        vamos a explicar como realizar las ramas o branches
-        ADEMAS VAMOS A EXPONER LA MANERA DE HACER UN MERGE PARA UNIR
-    LA RAMA SECUNDARIA Y LA PRINCIPAL </p>
+        vamos a explicar como realizar las ramas o branches</p>
     </div>
     </div>
     
