--- a/blopost.html
+++ b/blopost.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>El titulo del post</title>
+<title>Hyperblog 2.0</title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
@@ -22,7 +22,7 @@
         se vaa relizar un merge </p>
         <p>Adicional vamos a agregar un parrafo para visualizar
          el merge de manera correcta</p>
-    </div>
+        </div>
     </div>
     
 </body>
