color de fondo, logo nuevo ycambio de color de letra

--- a/blopost.html
+++ b/blopost.html
@@ -10,8 +10,10 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="Imagenes/Dragon.png">
             Hyperblog 
             <spam id ="tagline">Tu blog de confianza</spam>
+            
         </div>
         <div id="post">
             <h1> Este es el titulo 
