Edicion del footer

--- a/blopost.html
+++ b/blopost.html
@@ -22,7 +22,11 @@
         se vaa relizar un merge </p>
         <p>Adicional vamos a agregar un parrafo para visualizar
          el merge de manera correcta</p>
-        </div>
+
+       </div>
+       <div id="footer">
+            Hecho con amor en Platzi 
+       </div>
     </div>
     
 </body>
