--- a/blopost.html
+++ b/blopost.html
@@ -25,7 +25,7 @@
 
        </div>
        <div id="footer">
-            Hecho con amor en Platzi 
+            Hecho con amor en Platzi, Probando un pull hacia Footer
        </div>
     </div>
     
