Nuevo Cambio de Prueba

--- a/blopost.html
+++ b/blopost.html
@@ -26,6 +26,7 @@
        </div>
        <div id="footer">
             Hecho con amor en Platzi, Probando un pull hacia Footer
+            Nueva linea de prueba.
        </div>
     </div>
     
