--- a/blopost.html
+++ b/blopost.html
@@ -26,7 +26,7 @@
        </div>
        <div id="footer">
             Hecho con amor en Platzi, Probando un pull hacia Footer
-            Nueva linea de prueba.
+            Nueva linea de prueba. Prueba de pull
        </div>
     </div>
     
