Prueba De Broken

--- a/blopost.html
+++ b/blopost.html
@@ -23,7 +23,7 @@
         vamos a explicar como realizar las ramas o branches y 
         se vaa relizar un merge </p>
         <p>Adicional vamos a agregar un parrafo para visualizar
-         el merge de manera correcta</p>
+         el merge de manera correcta 2 da prueba</p>
         </div>
     </div>
     
