Nueva Pruebas broken

--- a/blopost.html
+++ b/blopost.html
@@ -21,10 +21,14 @@
             <p> y este es el parrafo de inicio donde 
 
         vamos a explicar como realizar las ramas o branches y 
-        se vaa relizar un merge </p>
-        <p>Adicional vamos a agregar un parrafo para visualizar
-         el merge de manera correcta 2 da prueba</p>
-        </div>
+        se vaa relizar un merge  </p>
+        <p>Adicional vamos a agregar un parrafo para visualizar el merge de manera correcta 2 da prueba</p>
+     
+       </div>
+       <div id="footer">
+            Hecho con amor en Platzi, Probando un pull hacia Footer
+            Nueva linea de prueba. Prueba de pull, y ahora psuh!
+       </div>
     </div>
     
 </body>
